--- a/styles/components/product-container.css
+++ b/styles/components/product-container.css
@@ -169,6 +169,9 @@
     background: transparent;
     padding: 4px;
     flex-shrink: 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .product-title {
@@ -370,7 +373,9 @@
     }
     
     .product-item {
-        width: 180px;
+        width: 100%;
+        max-width: 300px;
+        margin: 0 auto;
     }
     
     .header-title {
@@ -454,7 +459,9 @@
     }
     
     .product-item {
-        width: 160px;
+        width: 100%;
+        max-width: 280px;
+        margin: 0 auto;
     }
     
     .header-title {
